--- a/.ci/ubuntu12.04/Dockerfile
+++ b/.ci/ubuntu12.04/Dockerfile
@@ -21,6 +21,8 @@ RUN wget http://erlang.org/download/otp_src_21.2.tar.gz &&  tar zxvf otp_src_21.
 RUN wget https://www.python.org/ftp/python/3.6.7/Python-3.6.7.tgz \
     && tar xvf Python-3.6.7.tgz \
     && cd Python-3.6.7 \
+    && echo "_socket socketmodule.c" >> Modules/Setup.dist \ 
+    && echo "_ssl _ssl.c -DUSE_SSL -I/usr/local/ssl/include -I/usr/local/ssl/include/openssl -L/usr/local/ssl/lib -lssl -lcrypto" >> Modules/Setup.dist \
     && ./configure --prefix=/usr/local/python3.6.7 \
     && make \
     && make install \
