--- a/.ci/ubuntu14.04/Dockerfile
+++ b/.ci/ubuntu14.04/Dockerfile
@@ -1,13 +1,25 @@
 FROM ubuntu:14.04
 
-RUN apt-get update \
-    && apt-get install -y wget git zip curl unzip
+RUN apt-get update && apt-get install -y \
+    wget \
+    git \
+    zip \
+    curl \
+    unzip \
+    apt-transport-https \
+    ca-certificates \
+    software-properties-common
 RUN echo >> deb http://security.ubuntu.com/ubuntu precise-security main /etc/apt/sources.list
 RUN apt-get update \
     && apt-get install -y build-essential debhelper
 RUN wget http://packages.erlang-solutions.com/site/esl/esl-erlang/FLAVOUR_1_general/esl-erlang_21.2-1~ubuntu~trusty_amd64.deb -O /tmp/erlang.deb
 RUN dpkg -i /tmp/erlang.deb || true
 RUN apt-get -f install -y
+RUN add-apt-repository ppa:jonathonf/python-3.6 -y \
+    && apt-get update \
+    && apt-get install python3.6 -y \
+    && rm -rf /usr/bin/python3 \
+    && ln -s /usr/bin/python3.6 /usr/bin/python3
 RUN mkdir -p /root/.ssh/
 # cleanup
 RUN apt-get clean\
@@ -17,8 +29,7 @@ ADD ./files/id_rsa /root/.ssh/
 ADD ./files/id_rsa.pub /root/.ssh/
 ADD ./files/config /root/.ssh/
 ADD ./files/emqx_ci.sh /
-ADD ./files/emqx_install_test.sh /
 
-RUN chmod +x /emqx_ci.sh /emqx_install_test.sh
+RUN chmod +x /emqx_ci.sh 
 
 CMD ["/bin/bash", "-c", "source /emqx_ci.sh"]
