--- a/.ci/raspbian8/Dockerfile
+++ b/.ci/raspbian8/Dockerfile
@@ -4,6 +4,7 @@ COPY ./files/qemu-arm-static /usr/bin/qemu-arm-static
 
 
 RUN apt-get update && apt-get install -y \
+    ssh \
     wget \
     git \
     zip \
