--- a/relx.config
+++ b/relx.config
@@ -69,7 +69,7 @@
     {mkdir, "data/"},
     {mkdir, "data/mnesia"},
     {mkdir, "data/configs"},
-    {mkdir, "hook_lua"},
+    {mkdir, "data/scripts"},
     {template, "bin/emqx_env", "bin/emqx_env"},
     {template, "bin/emqx", "bin/emqx"},
     {template, "bin/emqx_ctl", "bin/emqx_ctl"},
