Revert "Create 'data/scripts' folder for lua-hook scripts"
This reverts commit 465ea8038aaaeafeb53fe43670531919aede2a9c.

--- a/relx.config
+++ b/relx.config
@@ -69,7 +69,7 @@
     {mkdir, "data/"},
     {mkdir, "data/mnesia"},
     {mkdir, "data/configs"},
-    {mkdir, "data/scripts"},
+    {mkdir, "hook_lua"},
     {template, "bin/emqx_env", "bin/emqx_env"},
     {template, "bin/emqx", "bin/emqx"},
     {template, "bin/emqx_ctl", "bin/emqx_ctl"},
