--- a/relx.config
+++ b/relx.config
@@ -1,6 +1,6 @@
 %% -*- mode: Erlang; fill-column: 80; comment-column: 75; -*-
 
-{release, {emqx, "3.0.1"}, [
+{release, {emqx, "3.1"}, [
   kernel,
   sasl,
   crypto,
@@ -68,7 +68,7 @@
     {mkdir, "data/"},
     {mkdir, "data/mnesia"},
     {mkdir, "data/configs"},
-    {mkdir, "hook_lua"},
+    {mkdir, "data/scripts"},
     {template, "bin/emqx_env", "bin/emqx_env"},
     {template, "bin/emqx", "bin/emqx"},
     {template, "bin/emqx_ctl", "bin/emqx_ctl"},
