--- a/relx.config
+++ b/relx.config
@@ -48,7 +48,8 @@
   {emqx_auth_pgsql, load},
   {emqx_auth_redis, load},
   {emqx_auth_jwt, load},
-  {emqx_plugin_template, load}
+  {emqx_plugin_template, load},
+  {emqx_psk_file, load}
 ]}.
 
 {include_src, false}.
@@ -82,12 +83,14 @@
     {template, "rel/conf/ssl_dist.conf", "etc/ssl_dist.conf"},
     {template, "rel/conf/plugins/emqx_coap.conf", "etc/plugins/emqx_coap.conf"},
     {template, "rel/conf/plugins/emqx_lwm2m.conf", "etc/plugins/emqx_lwm2m.conf"},
+    {template, "rel/conf/plugins/emqx_psk_file.conf", "etc/plugins/emqx_psk_file.conf"},
     {copy, "rel/conf/acl.conf", "etc/acl.conf"},
     {copy, "data/loaded_plugins", "data/loaded_plugins"},
     {copy, "bin/nodetool", "bin/nodetool"},
     {copy, "rel/schema", "releases/\{\{rel_vsn\}\}/"},
     {copy, "bin/install_upgrade_escript", "bin/install_upgrade_escript"},
     {copy, "deps/cuttlefish/cuttlefish", "bin/"},
-    {copy, "deps/emqx_lwm2m/lwm2m_xml", "etc/"}
+    {copy, "deps/emqx_lwm2m/lwm2m_xml", "etc/"},
+    {copy, "deps/emqx_psk_file/etc/psk.txt", "etc/psk.txt"}
 ]}.
 
