Windows release 3.1-beta.2

--- a/relx.config
+++ b/relx.config
@@ -47,7 +47,8 @@
   {emqx_auth_pgsql, load},
   {emqx_auth_redis, load},
   {emqx_auth_jwt, load},
-  {emqx_plugin_template, load}
+  {emqx_plugin_template, load},
+  {emqx_psk_file, load}
 ]}.
 
 {include_src, false}.
@@ -86,6 +87,7 @@
     {copy, "rel/schema", "releases/\{\{rel_vsn\}\}/"},
     {copy, "bin/install_upgrade_escript", "bin/install_upgrade_escript"},
     {copy, "bin/cuttlefish", "bin/cuttlefish"},
-    {copy, "deps/emqx_lwm2m/lwm2m_xml", "etc/"}
+    {copy, "deps/emqx_lwm2m/lwm2m_xml", "etc/"},
+    {copy, "deps/emqx_psk_file/etc/psk.txt", "etc/psk.txt"}
 ]}.
 
