Early version of rule engine

--- a/relx.config
+++ b/relx.config
@@ -33,6 +33,7 @@
   {emqx_stomp, load},
   {emqx_statsd, load},
   {emqx_management, load},
+  {emqx_rule_engine, load},
   {emqx_retainer, load},
   {emqx_reloader, load},
   {emqx_dashboard, load},
