--- a/relx.config
+++ b/relx.config
@@ -23,6 +23,8 @@
   cowboy,
   pbkdf2,
   bcrypt,
+  sqlparse,
+  jpparse,
   emqx,
   {mnesia, load},
   {ekka, load},
@@ -33,6 +35,7 @@
   {emqx_stomp, load},
   {emqx_statsd, load},
   {emqx_management, load},
+  {emqx_rule_engine, load},
   {emqx_retainer, load},
   {emqx_reloader, load},
   {emqx_dashboard, load},
