--- a/relx.config
+++ b/relx.config
@@ -22,6 +22,8 @@
   jsx,
   cowboy,
   pbkdf2,
+  sqlparse,
+  jpparse,
   emqx,
   {mnesia, load},
   {ekka, load},
@@ -32,6 +34,7 @@
   {emqx_stomp, load},
   {emqx_statsd, load},
   {emqx_management, load},
+  {emqx_rule_engine, load},
   {emqx_retainer, load},
   {emqx_reloader, load},
   {emqx_dashboard, load},
