--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {deps,
     [
-    %% temp workaround: It's testing branch is broken
+    %% temp workaround: Its testing branch is broken
     %% pin develop branch because it's fixed
     %% position it before everything else avoid getting resolved as dependency of dependency
      {emqx_management, {branch, "develop"}}
