--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,8 @@
 {deps,
     [
     %% temp workaround: Its testing branch is broken
-    %% pin develop branch because it's fixed
-    %% position it before everything else avoid getting resolved as dependency of dependency
+    %% pin develop branch because it's fixed there.
+    %% position it before everything else avoid getting resolved as dependency of dependencies
      {emqx_management, {branch, "develop"}}
     , emqx
     , emqx_recon
