--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,7 @@
     [
     %% temp workaround: Its testing branch is broken
     %% pin develop branch because it's fixed there.
-    %% position it before everything else avoid getting resolved as dependency of dependencies
+    %% position it before everything else to avoid getting resolved as dependency of dependencies
      {emqx_management, {branch, "develop"}}
     , emqx
     , emqx_recon
