Fix emqx booting on windows

--- a/relx.config
+++ b/relx.config
@@ -80,6 +80,7 @@
     {template, "bin/emqx_ctl.cmd", "bin/emqx_ctl.cmd"},
     {copy, "rel/conf/plugins", "etc/"},
     {copy, "deps/emqx/etc/certs", "etc/"},
+    {copy, "deps/emqx/etc/vm.args", "etc/"},
     {template, "rel/conf/emqx.conf", "etc/emqx.conf"},
     {template, "rel/conf/ssl_dist.conf", "etc/ssl_dist.conf"},
     {template, "rel/conf/plugins/emqx_coap.conf", "etc/plugins/emqx_coap.conf"},
