Fix rebar3 release

--- a/rebar.config
+++ b/rebar.config
@@ -1,35 +1,35 @@
 %% NOTE: Order of the deps matters!
 {deps,
-    [ {emqx, {branch, "develop-3.2"}}
-    , {emqx_recon, {branch, "develop-3.2"}}
-    , {emqx_retainer, {branch, "develop-3.2"}}
-    , {emqx_auth_clientid, {branch, "pin-emqx-develop-3.2"}}
-    , {emqx_auth_username, {branch, "pin-emqx-develop-3.2"}}
-    , {emqx_auth_http, {branch, "pin-emqx-develop-3.2"}}
-    , {emqx_auth_mysql, {branch, "pin-emqx-develop-3.2"}}
-    , {emqx_reloader, {branch, "develop-3.2"}}
-    , {emqx_sn, {branch, "pin-emqx-develop-3.2"}}
-    , {emqx_coap, {branch, "pin-emqx-develop-3.2"}}
-    , {emqx_stomp, {branch, "pin-emqx-develop-3.2"}}
-    , {emqx_web_hook, {branch, "develop-3.2"}}
-    , {emqx_auth_jwt, {branch, "pin-emqx-develop-3.2"}}
-    , {emqx_delayed_publish, {branch, "develop-3.2"}}
-    , {emqx_psk_file, {branch, "develop-3.2"}}
-    , {emqx_management, {branch, "pin-emqx-develop-3.2"}}
+    [ emqx
+    , emqx_management
+    , emqx_recon
+    , emqx_retainer
+    , emqx_auth_clientid
+    , emqx_auth_username
+    , emqx_auth_http
+    , emqx_auth_mysql
+    , emqx_reloader
+    , emqx_sn
+    , emqx_coap
+    , emqx_stomp
+    , emqx_web_hook
+    , emqx_auth_jwt
+    , emqx_delayed_publish
+    , emqx_psk_file
+    %% temp workaround: This is a dep of deps, added here to avoid conflicts
     ]}.
 
 %% Added to deps list for 'cloud' profile
 {cloud_deps,
-    [ {emqx_auth_ldap, {branch, "develop-3.2"}}
-    , {emqx_auth_mongo, {branch, "develop-3.2"}}
-    , {emqx_auth_pgsql, {branch, "develop-3.2"}}
-    , {emqx_auth_redis, {branch, "develop-3.2"}}
-    , {emqx_dashboard, {branch, "develop-3.2"}}
-    , {emqx_lua_hook, {branch, "develop-3.2"}}
-    , {emqx_lwm2m, {branch, "upgrade-lwm2m-coap-vsn"}}
-    , {emqx_plugin_template, {branch, "develop-3.2"}}
-    , {emqx_statsd, {branch, "develop-3.2"}}
-    , {emqx_rule_engine, {branch, "pin-emqx-develop-3.2"}}
+    [ emqx_auth_ldap
+    , emqx_auth_mongo
+    , emqx_auth_pgsql
+    , emqx_auth_redis
+    , emqx_dashboard
+    , emqx_lua_hook
+    , emqx_lwm2m
+    , emqx_statsd
+    , emqx_rule_engine
     ]}.
 
 {relx,
@@ -58,6 +58,7 @@
         , cowboy
         , pbkdf2
         , bcrypt
+        , mysql
         , emqx
         , {mnesia, load}
         , {ekka, load}
