--- a/rebar.config
+++ b/rebar.config
@@ -1,36 +1,39 @@
 %% NOTE: Order of the deps matters!
 {deps,
     [ emqx
-    , emqx_management
-    , emqx_recon
     , emqx_retainer
-    , emqx_auth_clientid
-    , emqx_auth_username
-    , emqx_auth_http
-    , emqx_auth_mysql
+    , emqx_management
     , emqx_reloader
     , emqx_sn
     , emqx_coap
     , emqx_stomp
-    , emqx_web_hook
+    , emqx_auth_clientid
+    , emqx_auth_username
+    , emqx_auth_http
     , emqx_auth_jwt
+    , emqx_auth_mysql
+    , emqx_web_hook
     , emqx_delayed_publish
+    , emqx_recon
     , emqx_psk_file
+    , emqx_rule_engine
     %% temp workaround: This is a dep of deps, added here to avoid conflicts
     ]}.
 
 %% Added to deps list for 'cloud' profile
 {cloud_deps,
-    [ emqx_auth_ldap
-    , emqx_auth_mongo
+    [ emqx_lwm2m
+    , emqx_auth_ldap
     , emqx_auth_pgsql
     , emqx_auth_redis
-    , emqx_dashboard
+    , emqx_auth_mongo
     , emqx_lua_hook
-    , emqx_lwm2m
+    , emqx_dashboard
     , emqx_statsd
-    , emqx_rule_engine
     ]}.
+
+{edge_deps,
+    [emqx_storm]}.
 
 {relx,
     [ {include_src,false}
