--- a/vars-cloud.config
+++ b/vars-cloud.config
@@ -1,3 +1,4 @@
 {enable_plugin_emqx_dashboard, true}.
 {enable_plugin_emqx_rule_engine, true}.
+{enable_plugin_emqx_cube, false}.
 {vm_args_file, "vm.args"}.
