Build emqx for windows

--- a/rebar.config
+++ b/rebar.config
@@ -146,4 +146,5 @@
 {cover_enabled, true}.
 {cover_opts, [verbose]}.
 {cover_export_enabled, true}.
-{post_hooks, [{'compile', "./post-compile.sh"}]}.
+{post_hooks, [ {"(linux|darwin|solaris|win32)", compile, "./post-compile.sh"}
+             , {"win32", compile, "post-compile.cmd"}]}.
