--- a/rebar.config
+++ b/rebar.config
@@ -140,6 +140,9 @@
 {edoc_opts, [{preprocess,true}]}.
 {erl_opts, [warn_unused_vars,warn_shadow_vars,warn_unused_import,
             warn_obsolete_guard,debug_info]}.
+
+{ct_compile_opts, [{i, "_build/cloud_dev/lib/emqx/include"}]}.
+
 {xref_checks, [undefined_function_calls,undefined_functions,locals_not_used,
                deprecated_function_calls,warnings_as_errors,
                deprecated_functions]}.
