Build for windows (#350)
* Fix wrong FilePath in rebar.config.script

* Finish post-compile.cmd for windows

* Make os:cmd compatible in windows

--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,4 @@
+
 %% NOTE: Order of the deps matters!
 {deps,
     [ emqx
@@ -146,4 +147,5 @@
 {cover_enabled, true}.
 {cover_opts, [verbose]}.
 {cover_export_enabled, true}.
-{post_hooks, [{'compile', "./post-compile.sh"}]}.
+{post_hooks, [ {"(linux|darwin|solaris)", compile, "./post-compile.sh"}
+             , {"win32", compile, "post-compile.cmd"}]}.
