Add post hooks of bsd platform

--- a/rebar.config
+++ b/rebar.config
@@ -147,5 +147,5 @@
 {cover_enabled, true}.
 {cover_opts, [verbose]}.
 {cover_export_enabled, true}.
-{post_hooks, [ {"(linux|darwin|solaris)", compile, "./post-compile.sh"}
+{post_hooks, [ {"(linux|darwin|solaris|freebsd|netbsd|openbsd)", compile, "./post-compile.sh"}
              , {"win32", compile, "post-compile.cmd"}]}.
