Support `make run` in emqx_rel

--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,3 @@
-
 %% NOTE: Order of the deps matters!
 {deps,
     [ emqx
@@ -146,5 +145,8 @@
 {cover_enabled, true}.
 {cover_opts, [verbose]}.
 {cover_export_enabled, true}.
+
+{plugins, [rebar3_run]}.
+
 {post_hooks, [ {"(linux|darwin|solaris|freebsd|netbsd|openbsd)", compile, "./post-compile.sh"}
              , {"win32", compile, "post-compile.cmd"}]}.
