Restore emqx_plugin_template in emqx deps

--- a/rebar.config
+++ b/rebar.config
@@ -17,6 +17,7 @@
     , emqx_recon
     , emqx_psk_file
     , emqx_rule_engine
+    , emqx_plugin_template
     ]}.
 
 %% Added to deps list for 'cloud' profile
