Comment observer apps

--- a/rebar.config
+++ b/rebar.config
@@ -124,7 +124,7 @@
     , {emqx_lua_hook, load}
     , {emqx_lwm2m, load}
     , {emqx_statsd, load}
-    , {observer, load}
+    %% , {observer, load}
     , luerl
     , xmerl
     ]}.
