Support generating release with elixir deps

--- a/rebar.config
+++ b/rebar.config
@@ -148,7 +148,18 @@
 {cover_opts, [verbose]}.
 {cover_export_enabled, true}.
 
-{plugins, [rebar3_run]}.
+{plugins, [ rebar3_run
+          , {rebar3_elixir_compile, {git, "https://github.com/barrel-db/rebar3_elixir_compile.git", {branch, "master"}}}]}.
+
+{provider_hooks, [
+  {pre, [{compile, {ex, compile}}]}
+]}.
+
+{elixir_opts,
+  [
+    {env, dev}
+  ]
+}.
 
 {post_hooks, [ {"(linux|darwin|solaris|freebsd|netbsd|openbsd)", compile, "./post-compile.sh"}
              , {"win32", compile, "post-compile.cmd"}]}.
