Integrate elixir plugin

--- a/rebar.config
+++ b/rebar.config
@@ -18,6 +18,7 @@
     , emqx_psk_file
     , emqx_rule_engine
     , emqx_plugin_template
+    , emqx_elixir_plugin
     ]}.
 
 %% Added to deps list for 'cloud' profile
@@ -82,6 +83,7 @@
         , {emqx_auth_mysql, load}
         , {emqx_auth_jwt, load}
         , {emqx_psk_file, load}
+        , {emqx_elixir_plugin, load}
         ]}
     , {overlay,
         [ {mkdir,"etc/"}
@@ -149,6 +151,7 @@
 {cover_export_enabled, true}.
 
 {plugins, [ rebar3_run
+          , rebar_mix
           , {rebar3_elixir_compile, {git, "https://github.com/barrel-db/rebar3_elixir_compile.git", {branch, "master"}}}]}.
 
 {provider_hooks, [
