Dynamically integrate elixir plugin

--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,6 @@
 %% NOTE: Order of the deps matters!
+{elixir_deps, []}.
+
 {deps,
     [ emqx
     , emqx_retainer
@@ -114,6 +116,9 @@
         ]}
     ]}.
 
+{elixir_relx_apps,
+    []}.
+
 {edge_relx_apps,
     [{emqx_cube, load}]}.
 
@@ -152,17 +157,8 @@
 
 {plugins, [ rebar3_run
           , rebar_mix
-          , {rebar3_elixir_compile, {git, "https://github.com/barrel-db/rebar3_elixir_compile.git", {branch, "master"}}}]}.
-
-{provider_hooks, [
-  {pre, [{compile, {ex, compile}}]}
-]}.
-
-{elixir_opts,
-  [
-    {env, dev}
-  ]
-}.
+          , {rebar3_elixir_compile, {git, "https://github.com/barrel-db/rebar3_elixir_compile.git", {branch, "master"}}}
+          ]}.
 
 {post_hooks, [ {"(linux|darwin|solaris|freebsd|netbsd|openbsd)", compile, "./post-compile.sh"}
              , {"win32", compile, "post-compile.cmd"}]}.
