--- a/rebar.config
+++ b/rebar.config
@@ -131,7 +131,7 @@
     , {emqx_lua_hook, load}
     , {emqx_lwm2m, load}
     , {emqx_statsd, load}
-    %% , {observer, load}
+    , {observer, load}
     , luerl
     , xmerl
     ]}.
