--- a/rebar.config
+++ b/rebar.config
@@ -20,7 +20,6 @@
     , emqx_psk_file
     , emqx_rule_engine
     , emqx_plugin_template
-    , emqx_elixir_plugin
     ]}.
 
 %% Added to deps list for 'cloud' profile
@@ -85,7 +84,6 @@
         , {emqx_auth_mysql, load}
         , {emqx_auth_jwt, load}
         , {emqx_psk_file, load}
-        , {emqx_elixir_plugin, load}
         ]}
     , {overlay,
         [ {mkdir,"etc/"}
@@ -155,10 +153,7 @@
 {cover_opts, [verbose]}.
 {cover_export_enabled, true}.
 
-{plugins, [ rebar3_run
-          , rebar_mix
-          , {rebar3_elixir_compile, {git, "https://github.com/barrel-db/rebar3_elixir_compile.git", {branch, "master"}}}
-          ]}.
+{plugins, [rebar3_run]}.
 
 {post_hooks, [ {"(linux|darwin|solaris|freebsd|netbsd|openbsd)", compile, "./post-compile.sh"}
              , {"win32", compile, "post-compile.cmd"}]}.
