--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,6 @@
 %% NOTE: Order of the deps matters!
+{elixir_deps, []}.
+
 {deps,
     [ emqx
     , emqx_retainer
@@ -111,6 +113,9 @@
         , {copy, "{{output_dir}}/../../lib/emqx_psk_file/etc/psk.txt", "etc/psk.txt"}
         ]}
     ]}.
+
+{elixir_relx_apps,
+    []}.
 
 {edge_relx_apps,
     [{emqx_cube, load}]}.
