--- a/rebar.config
+++ b/rebar.config
@@ -102,6 +102,7 @@
         , {template,"{{output_dir}}/../../conf/ssl_dist.conf","etc/ssl_dist.conf"}
         , {template,"{{output_dir}}/../../conf/plugins/emqx_coap.conf", "etc/plugins/emqx_coap.conf"}
         , {template,"{{output_dir}}/../../conf/plugins/emqx_psk_file.conf", "etc/plugins/emqx_psk_file.conf"}
+        , {template,"{{output_dir}}/../../conf/plugins/emqx_auth_http.conf", "etc/plugins/emqx_auth_http.conf"}
         , {template, "data/loaded_plugins.tmpl", "data/loaded_plugins"}
         , {copy,"{{output_dir}}/../../conf/acl.conf","etc/acl.conf"}
         , {copy,"bin/nodetool","bin/nodetool"}
