--- a/vars-cloud.config
+++ b/vars-cloud.config
@@ -1,4 +1,5 @@
 {enable_plugin_emqx_dashboard, true}.
 {enable_plugin_emqx_rule_engine, true}.
+{enable_plugin_emqx_bridge_mqtt, false}.
 {enable_plugin_emqx_cube, false}.
 {vm_args_file, "vm.args"}.
