Restore delayed publish plugin

--- a/rebar.config
+++ b/rebar.config
@@ -20,6 +20,7 @@
     , emqx_psk_file
     , emqx_rule_engine
     , emqx_plugin_template
+    , emqx_delayed_publish
     ]}.
 
 %% Added to deps list for 'cloud' profile
@@ -76,6 +77,8 @@
         , {emqx_rule_engine, load}
         , {emqx_retainer, load}
         , {emqx_reloader, load}
+        , {emqx_bridge_mqtt, load}
+        , {emqx_delayed_publish, load}
         , {emqx_web_hook, load}
         , {emqx_auth_clientid, load}
         , {emqx_auth_username, load}
@@ -99,6 +102,7 @@
         , {copy,"{{output_dir}}/../../conf/plugins","etc/"}
         , {template,"{{output_dir}}/../../conf/emqx.conf","etc/emqx.conf"}
         , {template,"{{output_dir}}/../../conf/ssl_dist.conf","etc/ssl_dist.conf"}
+        , {template,"{{output_dir}}/../../conf/plugins/emqx_bridge_mqtt.conf", "etc/plugins/emqx_bridge_mqtt.conf"}
         , {template,"{{output_dir}}/../../conf/plugins/emqx_coap.conf", "etc/plugins/emqx_coap.conf"}
         , {template,"{{output_dir}}/../../conf/plugins/emqx_psk_file.conf", "etc/plugins/emqx_psk_file.conf"}
         , {template,"{{output_dir}}/../../conf/plugins/emqx_auth_http.conf", "etc/plugins/emqx_auth_http.conf"}
