Add emqx_bridge_mqtt (#382)
* Add emqx_bridge_mqtt

--- a/rebar.config
+++ b/rebar.config
@@ -6,6 +6,7 @@
     , emqx_retainer
     , emqx_management
     , emqx_reloader
+    , emqx_bridge_mqtt
     , emqx_sn
     , emqx_coap
     , emqx_stomp
@@ -76,6 +77,7 @@
         , {emqx_rule_engine, load}
         , {emqx_retainer, load}
         , {emqx_reloader, load}
+        , {emqx_bridge_mqtt, load}
         , {emqx_delayed_publish, load}
         , {emqx_web_hook, load}
         , {emqx_auth_clientid, load}
@@ -100,6 +102,7 @@
         , {copy,"{{output_dir}}/../../conf/plugins","etc/"}
         , {template,"{{output_dir}}/../../conf/emqx.conf","etc/emqx.conf"}
         , {template,"{{output_dir}}/../../conf/ssl_dist.conf","etc/ssl_dist.conf"}
+        , {template,"{{output_dir}}/../../conf/plugins/emqx_bridge_mqtt.conf", "etc/plugins/emqx_bridge_mqtt.conf"}
         , {template,"{{output_dir}}/../../conf/plugins/emqx_coap.conf", "etc/plugins/emqx_coap.conf"}
         , {template,"{{output_dir}}/../../conf/plugins/emqx_psk_file.conf", "etc/plugins/emqx_psk_file.conf"}
         , {template,"{{output_dir}}/../../conf/plugins/emqx_auth_http.conf", "etc/plugins/emqx_auth_http.conf"}
