Add docker and packages to deploy

--- a/deploy/docker/Makefile
+++ b/deploy/docker/Makefile
@@ -13,7 +13,7 @@ EMQX_NAME = $(subst emqx/,,$(TARGET))
 ARCH_LIST = amd64 arm64v8 arm32v7 i386 s390x
 
 .PHONY: all
-all: build test tag save
+all: build test tag
 
 .PHONY: prepare
 prepare:
@@ -149,17 +149,17 @@ tag:
 save:
 	@echo "DOCKER SAVE: Save Docker image." 
 
-	@mkdir -p ../../_packages
+	@mkdir -p ../../_packages/$(EMQX_NAME)
 
 	@if [ -n  "$$(docker images -q $(TARGET):$(BUILD_VERSION))" ]; then \
-		docker save $(TARGET):$(BUILD_VERSION) > $(EMQX_NAME)-docker-$(BUILD_VERSION); \
-		zip -r -m ../../_packages/$(EMQX_NAME)-docker-$(BUILD_VERSION).zip $(EMQX_NAME)-docker-$(BUILD_VERSION); \
+		docker save $(TARGET):$(BUILD_VERSION) > ../../_packages/$(EMQX_NAME)/$(EMQX_NAME)-docker-$(BUILD_VERSION); \
+		zip -r -m ../../_packages/$(EMQX_NAME)/$(EMQX_NAME)-docker-$(BUILD_VERSION).zip ../../_packages/$(EMQX_NAME)/$(EMQX_NAME)-docker-$(BUILD_VERSION); \
 	fi
 	
 	@for arch in $(ARCH_LIST); do \
 		if [ -n  "$$(docker images -q  $(TARGET):$(BUILD_VERSION)-$(OS)-$${arch})" ]; then \
-			docker save  $(TARGET):$(BUILD_VERSION)-$(OS)-$${arch} > $(EMQX_NAME)-docker-$(BUILD_VERSION)-$(OS)-$${arch}; \
-			zip -r -m ../../_packages/$(EMQX_NAME)-docker-$(BUILD_VERSION)-$(OS)-$${arch}.zip $(EMQX_NAME)-docker-$(BUILD_VERSION)-$(OS)-$${arch}; \
+			docker save  $(TARGET):$(BUILD_VERSION)-$(OS)-$${arch} > ../../_packages/$(EMQX_NAME)/$(EMQX_NAME)-docker-$(BUILD_VERSION)-$(OS)-$${arch}; \
+			zip -r -m ../../_packages/$(EMQX_NAME)/$(EMQX_NAME)-docker-$(BUILD_VERSION)-$(OS)-$${arch}.zip ../../_packages/$(EMQX_NAME)/$(EMQX_NAME)-docker-$(BUILD_VERSION)-$(OS)-$${arch}; \
 		fi; \
 	done
 
