Rm emqx_cube plugin from emqx-edge

--- a/rebar.config
+++ b/rebar.config
@@ -35,7 +35,7 @@
   emqx_statsd
  ]}.
 
-{edge_deps, [emqx_cube]}.
+{edge_deps, []}.
 
 {relx,
  [{include_src, false},
@@ -119,7 +119,7 @@
 
 {elixir_relx_apps, []}.
 
-{edge_relx_apps, [{emqx_cube, load}]}.
+{edge_relx_apps, []}.
 
 {cloud_relx_apps,
  [{emqx_auth_ldap, load},
