Add emqx description

--- a/rebar.config
+++ b/rebar.config
@@ -5,7 +5,7 @@
  [emqx,
   emqx_retainer,
   emqx_management,
-  emqx_reloader,
+  emqx_dashboard,
   emqx_bridge_mqtt,
   emqx_sn,
   emqx_coap,
@@ -18,9 +18,7 @@
   emqx_web_hook,
   emqx_delayed_publish,
   emqx_recon,
-  emqx_psk_file,
-  emqx_rule_engine,
-  emqx_plugin_template
+  emqx_rule_engine
  ]}.
 
 %% Added to deps list for 'cloud' profile
@@ -31,8 +29,10 @@
   emqx_auth_redis,
   emqx_auth_mongo,
   emqx_lua_hook,
-  emqx_dashboard,
-  emqx_statsd
+  emqx_statsd,
+  emqx_reloader,
+  emqx_psk_file,
+  emqx_plugin_template
  ]}.
 
 {edge_deps, []}.
@@ -67,23 +67,22 @@
     emqx,
     {mnesia, load},
     {ekka, load},
+    {emqx_retainer, load},
+    {emqx_management, load},
+    {emqx_dashboard, load},
+    {emqx_bridge_mqtt, load},
     {emqx_sn, load},
     {emqx_coap, load},
-    {emqx_recon, load},
     {emqx_stomp, load},
-    {emqx_management, load},
-    {emqx_rule_engine, load},
-    {emqx_retainer, load},
-    {emqx_reloader, load},
-    {emqx_bridge_mqtt, load},
-    {emqx_delayed_publish, load},
-    {emqx_web_hook, load},
     {emqx_auth_clientid, load},
     {emqx_auth_username, load},
     {emqx_auth_http, load},
     {emqx_auth_mysql, load},
     {emqx_auth_jwt, load},
-    {emqx_psk_file, load}
+    {emqx_web_hook, load},
+    {emqx_delayed_publish, load},
+    {emqx_recon, load},
+    {emqx_rule_engine, load}
    ]},
   {overlay,
    [{mkdir,"etc/"},
@@ -102,7 +101,6 @@
     {template,"{{output_dir}}/../../conf/ssl_dist.conf","etc/ssl_dist.conf"},
     {template,"{{output_dir}}/../../conf/plugins/emqx_bridge_mqtt.conf", "etc/plugins/emqx_bridge_mqtt.conf"},
     {template,"{{output_dir}}/../../conf/plugins/emqx_coap.conf", "etc/plugins/emqx_coap.conf"},
-    {template,"{{output_dir}}/../../conf/plugins/emqx_psk_file.conf", "etc/plugins/emqx_psk_file.conf"},
     {template,"{{output_dir}}/../../conf/plugins/emqx_auth_http.conf", "etc/plugins/emqx_auth_http.conf"},
     {template, "data/loaded_plugins.tmpl", "data/loaded_plugins"},
     {copy,"{{output_dir}}/../../conf/acl.conf","etc/acl.conf"},
@@ -111,8 +109,7 @@
     {copy,"bin/install_upgrade_escript", "bin/install_upgrade_escript"},
     {template,"{{output_dir}}/../../lib/emqx/etc/{{vm_args_file}}","etc/vm.args"},
     {copy, "{{output_dir}}/../../lib/emqx/etc/certs","etc/"},
-    {copy, "{{output_dir}}/../../lib/cuttlefish/cuttlefish","bin/"},
-    {copy, "{{output_dir}}/../../lib/emqx_psk_file/etc/psk.txt", "etc/psk.txt"}
+    {copy, "{{output_dir}}/../../lib/cuttlefish/cuttlefish","bin/"}
    ]}
  ]}.
 
@@ -121,14 +118,16 @@
 {edge_relx_apps, []}.
 
 {cloud_relx_apps,
- [{emqx_auth_ldap, load},
-  {emqx_auth_mongo, load},
+ [{emqx_lwm2m, load},
+  {emqx_auth_ldap, load},
   {emqx_auth_pgsql, load},
   {emqx_auth_redis, load},
-  {emqx_dashboard, load},
+  {emqx_auth_mongo, load},
   {emqx_lua_hook, load},
-  {emqx_lwm2m, load},
   {emqx_statsd, load},
+  {emqx_reloader, load},
+  {emqx_psk_file, load},
+  {emqx_plugin_template, load},
   {observer, load},
   luerl,
   xmerl
@@ -136,7 +135,9 @@
 
 {cloud_relx_overlay,
  [{template,"{{output_dir}}/../../conf/plugins/emqx_lwm2m.conf", "etc/plugins/emqx_lwm2m.conf"},
-  {copy,"{{output_dir}}/../../lib/emqx_lwm2m/lwm2m_xml","etc/"}
+  {template,"{{output_dir}}/../../conf/plugins/emqx_psk_file.conf", "etc/plugins/emqx_psk_file.conf"},
+  {copy,"{{output_dir}}/../../lib/emqx_lwm2m/lwm2m_xml","etc/"},
+  {copy, "{{output_dir}}/../../lib/emqx_psk_file/etc/psk.txt", "etc/psk.txt"}
  ]}.
 
 {edge_relx_overlay, []}.
