--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: checkout
-      run: git checkout $(${{ github.ref }} | sed -r 's .*/.*/(.*) \1 g')
+      run: git checkout $("${{ github.ref }}" | sed -r 's .*/.*/(.*) \1 g')
     - name: install
       run: |
         set-executionpolicy remotesigned -s cu
