--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,24 +11,24 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: checkout
-      run: git checkout $("${{ github.ref }}" | sed -r 's .*/.*/(.*) \1 g')
+      with:
+        ref: develop
+    # - name: checkout
+    #   run: git checkout $("${{ github.ref }}" | sed -r 's .*/.*/(.*) \1 g')
     - name: install
       run: |
         set-executionpolicy remotesigned -s cu
         iex (new-object net.webclient).downloadstring('https://get.scoop.sh')
         scoop install curl 7zip erlang
         $env:path + ";" + $env:USERPROFILE + "\scoop\shims"
-    - name: build
-      run: |
         make emqx
-        ./_build/emqx/rel/emqx/bin/emqx start
-        ./_build/emqx/rel/emqx/bin/emqx stop
     
   mac:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v1
+      with: 
+        ref: $(${{ github.ref }} | gsed -r  "s .*/.*/(.*) \1 g")
     - name: install
       run: |
         /usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
