--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,6 +22,9 @@ jobs:
         scoop install curl 7zip erlang
         $env:path + ";" + $env:USERPROFILE + "\scoop\shims"
         make emqx
+        cd _build/emqx/rel/emqx/bin
+        emqx start
+        emqx stop
     
   mac:
     runs-on: macos-latest
