--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,13 +19,12 @@ jobs:
       run: |
         set-executionpolicy remotesigned -s cu
         iex (new-object net.webclient).downloadstring('https://get.scoop.sh')
-        scoop install curl 7zip erlang
+        scoop install sudo curl 7zip erlang
         $env:path + ";" + $env:USERPROFILE + "\scoop\shims"
         make emqx
-        cd _build/emqx/rel
         Compress-Archive -Path _build/emqx/rel/emqx -DestinationPath _build/emqx/rel/emqx-windows-develop.zip
-        ./emqx start
-        ./emqx stop
+        sudo ./_build/emqx/rel/emqx/bin/emqx start
+        sudo ./_build/emqx/rel/emqx/bin/emqx stop
     - uses: actions/upload-artifact@v1
       with:
         name: emqx-windows-develop.zip
@@ -42,18 +41,18 @@ jobs:
         /usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
         brew install curl zip gnu-sed erlang
         echo "/usr/local/bin:$PATH" >> ~/.bashrc
-    # - name: build
-    #   run: |
-    #     refs=$(echo ${{ github.ref }} | gsed -r  "s .*/.*/(.*) \1 g")
-    #     EMQX_DEPS_DEFAULT_VSN=$refs make emqx
-    #     ./_build/emqx/rel/emqx/bin/emqx start
-    #     ./_build/emqx/rel/emqx/bin/emqx stop
     - name: build
       run: |
-        make emqx
-        cd _build/emqx/rel
-        zip -rq emqx-macosx-develop.zip emqx
-    - uses: actions/upload-artifact@v1
-      with:
-        name: emqx-macosx-develop.zip
-        path: _build/emqx/rel/emqx-macosx-develop.zip
+        refs=$(echo ${{ github.ref }} | gsed -r  "s .*/.*/(.*) \1 g")
+        EMQX_DEPS_DEFAULT_VSN=$refs make emqx
+        ./_build/emqx/rel/emqx/bin/emqx start
+        ./_build/emqx/rel/emqx/bin/emqx stop
+    # - name: build
+    #   run: |
+    #     make emqx
+    #     cd _build/emqx/rel
+    #     zip -rq emqx-macosx-develop.zip emqx
+    # - uses: actions/upload-artifact@v1
+    #   with:
+    #     name: emqx-macosx-develop.zip
+    #     path: _build/emqx/rel/emqx-macosx-develop.zip
