--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,7 +19,7 @@ jobs:
       run: |
         set-executionpolicy remotesigned -s cu
         iex (new-object net.webclient).downloadstring('https://get.scoop.sh')
-        scoop install sudo curl 7zip erlang
+        scoop install sudo curl 7zip aws erlang
         $env:path + ";" + $env:USERPROFILE + "\scoop\shims"
         make emqx
         Compress-Archive -Path _build/emqx/rel/emqx -DestinationPath _build/emqx/rel/emqx-windows-develop.zip
@@ -36,11 +36,16 @@ jobs:
     - uses: actions/checkout@v1
       with:
         ref: develop
-    - name: install
+    - name: prepare
       run: |
         /usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
-        brew install curl zip gnu-sed erlang
+        brew install curl zip unzip gnu-sed erlang
         echo "/usr/local/bin:$PATH" >> ~/.bashrc
+    - name: instsall aws
+      run: |
+        curl "https://d1vvhvl2y92vvt.cloudfront.net/awscli-exe-macos.zip" -o "awscliv2.zip"
+        unzip awscliv2.zip
+        sudo ./aws/install
     - name: build
       run: |
         refs=$(echo ${{ github.ref }} | gsed -r  "s .*/.*/(.*) \1 g")
