--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,12 +1,10 @@
 name: Release
 
-on: 
-    push:
-        tags:
-            - v*
-# on:
-#   release:
-#       types: [published]
+# on: 
+#     push:
+#         tags:
+#             - v*
+on: push
 
 jobs:
   win:
@@ -49,18 +47,18 @@ jobs:
         curl "https://d1vvhvl2y92vvt.cloudfront.net/awscli-exe-macos.zip" -o "awscliv2.zip"
         unzip awscliv2.zip
         sudo ./aws/install
-    - name: build
-      run: |
-        refs=$(echo ${{ github.ref }} | gsed -r  "s .*/.*/(.*) \1 g")
-        EMQX_DEPS_DEFAULT_VSN=$refs make emqx
-        ./_build/emqx/rel/emqx/bin/emqx start
-        ./_build/emqx/rel/emqx/bin/emqx stop
     # - name: build
     #   run: |
-    #     make emqx
-    #     cd _build/emqx/rel
-    #     zip -rq emqx-macosx-develop.zip emqx
-    # - uses: actions/upload-artifact@v1
-    #   with:
-    #     name: emqx-macosx-develop.zip
-    #     path: _build/emqx/rel/emqx-macosx-develop.zip
+    #     refs=$(echo ${{ github.ref }} | gsed -r  "s .*/.*/(.*) \1 g")
+    #     EMQX_DEPS_DEFAULT_VSN=$refs make emqx
+    #     ./_build/emqx/rel/emqx/bin/emqx start
+    #     ./_build/emqx/rel/emqx/bin/emqx stop
+    - name: build
+      run: |
+        EMQX_DEPS_DEFAULT_VSN=develop make emqx
+        cd _build/emqx/rel
+        zip -rq emqx-macosx-develop.zip emqx
+    - uses: actions/upload-artifact@v1
+      with:
+        name: emqx-macosx-develop.zip
+        path: _build/emqx/rel/emqx-macosx-develop.zip
