--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -19,8 +19,7 @@ jobs:
                     make cover
             - uses: actions/upload-artifact@v1
                 with:
-                    name: emqx-windows-develop.zip
-                    path: _build/emqx/rel/emqx-windows-develop.zip
+                    path: _build/emqx+test/logs
         
         services:
             mongo:
